Fixed internal server errors

--- a/plugin.yml
+++ b/plugin.yml
@@ -4,6 +4,7 @@ api: [3.1.0, 4.0.0]
 version: 1.0.0
 author: ZayDepths Development
 
+depend: [FormAPI]
 commands:
  profile:
   description: Shows your current level and statistics
